fix(FilesApp): corrected left menu with wrong z-index & linked the file name to it's css class properly

--- a/src/FilesApp/FilesApp.css
+++ b/src/FilesApp/FilesApp.css
@@ -1,4 +1,5 @@
 .leftPannel {
+  z-index: 1;
   background-color: aliceblue;
   position: fixed;
   height: 100vh;
@@ -46,5 +47,6 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  user-select: none;
   color: rgba(0, 0, 0, 0.8);
 }
